<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>${groupId}</groupId>
	<artifactId>${artifactId}</artifactId>
	<version>${version}</version>
	<packaging>war</packaging>

	<name>${artifactId}</name>
	<description>JSP Web App</description>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.1.1</version>
	</parent>

	<properties>
		<java.version>17</java.version>

		<jakartaee.version>9.1.0</jakartaee.version>

		<!-- https://github.com/OpenLiberty/ci.maven -->
		<liberty-maven-plugin.version>3.7.1</liberty-maven-plugin.version>
		<liberty-runtime.version>23.0.0.2</liberty-runtime.version>
		<liberty.loose-application>true</liberty.loose-application>

		<!-- https://codehaus-cargo.github.io/cargo/Maven+3+Plugin+Reference+Guide.html -->
		<!-- https://codehaus-cargo.github.io/cargo/Configuration+properties.html -->
		<cargo-maven-plugin.version>1.10.7</cargo-maven-plugin.version>
		<cargo-wildfly-runtime>wildfly28x</cargo-wildfly-runtime>
		<cargo-wildfly-script.dir>${project.basedir}/src/main/wildfly</cargo-wildfly-script.dir>

		<cargo-glassfish-runtime>glassfish7x</cargo-glassfish-runtime>

		<!-- https://tomee.apache.org/master/docs/tomee-maven-plugin.html -->
		<tomee-maven-plugin.version>9.1.0</tomee-maven-plugin.version>
		<tomee-runtime.version>9.1.0</tomee-runtime.version>

		<!-- Odds and ends -->
		<bootstrap.version>4.4.1</bootstrap.version>
		<jquery.version>3.4.1</jquery.version>

		<!-- Library support for Open Liberty -->
		<repo.dir>${user.home}/.m2/repository</repo.dir>
		<liberty.var.derbypath>${repo.dir}/org/apache/derby/derby/${derby.version}/derby-${derby.version}.jar</liberty.var.derbypath>
		<liberty.var.derbyclientpath>${repo.dir}/org/apache/derby/derbyclient/${derby.version}/derbyclient-${derby.version}.jar</liberty.var.derbyclientpath>
		<liberty.var.derbytoolspath>${repo.dir}/org/apache/derby/derbytools/${derby.version}/derbytools-${derby.version}.jar</liberty.var.derbytoolspath>
		<liberty.var.derbysharedpath>${repo.dir}/org/apache/derby/derbyshared/${derby.version}/derbyshared-${derby.version}.jar</liberty.var.derbysharedpath>
		<liberty.var.hikaricp>${repo.dir}/com/zaxxer/HikariCP/${hikaricp.version}/HikariCP-${hikaricp.version}.jar</liberty.var.hikaricp>
		<liberty.var.slf4j>${repo.dir}/org/slf4j/slf4j-api/${slf4j.version}/slf4j-api-${slf4j.version}.jar</liberty.var.slf4j>
		<liberty.var.datasourceutil>${project.build.directory}/${project.artifactId}-${project.version}-datasource.jar</liberty.var.datasourceutil>

		<!-- Testing support -->
		<arquillian.version>1.7.0.Final</arquillian.version>
		<arquillian-drone.version>3.0.0-alpha.7</arquillian-drone.version>
		<arquillian-graphene.version>3.0.0-alpha.3</arquillian-graphene.version>
		<!-- Newer versions deprecate and remove code needed by Arquillian -->
		<selenium.version>4.1.1</selenium.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>jakarta.platform</groupId>
			<artifactId>jakarta.jakartaee-web-api</artifactId>
			<version>${jakartaee.version}</version>
			<scope>provided</scope>
		</dependency>
	
		<dependency>
			<groupId>com.zaxxer</groupId>
			<artifactId>HikariCP</artifactId>
		</dependency>
		<dependency>
			<groupId>org.flywaydb</groupId>
			<artifactId>flyway-core</artifactId>
			<exclusions>
				<exclusion>
					<groupId>com.fasterxml.jackson.dataformat</groupId>
					<artifactId>jackson-dataformat-toml</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.apache.derby</groupId>
			<artifactId>derby</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.derby</groupId>
			<artifactId>derbyclient</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.derby</groupId>
			<artifactId>derbytools</artifactId>
		</dependency>

		<dependency>
			<groupId>org.webjars</groupId>
			<artifactId>bootstrap</artifactId>
			<version>${bootstrap.version}</version>
		</dependency>
		<dependency>
			<groupId>org.webjars</groupId>
			<artifactId>jquery</artifactId>
			<version>${jquery.version}</version>
		</dependency>

		<!-- Wildfly uses new namespace for JSTL tags (JakartaEE 10?), Liberty and TomEE do not yet -->
		<dependency>
			<groupId>org.glassfish.web</groupId>
			<artifactId>jakarta.servlet.jsp.jstl</artifactId>
		</dependency>

		<!-- ==================================================== -->
		<!-- Testing Dependencies -->
		<!-- ==================================================== -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<scope>test</scope>
		</dependency>

		<!-- Arquillian Container -->
		<dependency>
			<groupId>org.jboss.arquillian.junit5</groupId>
			<artifactId>arquillian-junit5-container</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.jboss.arquillian.graphene</groupId>
			<artifactId>graphene-webdriver</artifactId>
			<version>${arquillian-graphene.version}</version>
			<type>pom</type>
			<exclusions>
				<exclusion>
					<groupId>xerces</groupId>
					<artifactId>xercesImpl</artifactId>
				</exclusion>
			</exclusions>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.jboss.shrinkwrap.resolver</groupId>
			<artifactId>shrinkwrap-resolver-depchain</artifactId>
			<type>pom</type>
			<scope>test</scope>
		</dependency>

		<!-- Embedded Web Profile Container -->
		<dependency>
			<groupId>org.apache.tomee</groupId>
			<artifactId>arquillian-tomee-embedded</artifactId>
			<version>${tomee-runtime.version}</version>
			<exclusions>
				<exclusion>
					<groupId>org.jboss.arquillian.junit</groupId>
					<artifactId>arquillian-junit-container</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.apache.myfaces.core</groupId>
					<artifactId>myfaces-api</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.apache.myfaces.core</groupId>
					<artifactId>myfaces-impl</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.apache.tomee</groupId>
					<artifactId>tomee-myfaces</artifactId>
				</exclusion>
			</exclusions>
			<scope>test</scope>
		</dependency>
		<!-- Myfaces is excluded above because it didn't work. Mojarra does. -->
		<dependency>
			<groupId>org.apache.tomee</groupId>
			<artifactId>tomee-mojarra</artifactId>
			<version>${tomee-runtime.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.jboss.arquillian</groupId>
				<artifactId>arquillian-bom</artifactId>
				<version>${arquillian.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.jboss.arquillian.extension</groupId>
				<artifactId>arquillian-drone-bom</artifactId>
				<version>${arquillian-drone.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<profiles>
		<profile>
			<id>liberty</id>
			<build>
				<plugins>
					<plugin>
						<!-- mvn -P liberty liberty:run -->
						<groupId>io.openliberty.tools</groupId>
						<artifactId>liberty-maven-plugin</artifactId>
						<version>${liberty-maven-plugin.version}</version>
						<configuration>
							<runtimeArtifact>
								<groupId>io.openliberty</groupId>
								<artifactId>openliberty-jakartaee9</artifactId>
								<version>${liberty-runtime.version}</version>
								<type>zip</type>
							</runtimeArtifact>
							<stripVersion>true</stripVersion>
							<looseApplication>${liberty.loose-application}</looseApplication>
							<!-- See server.env for env variables -->
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>wildfly</id>
			<build>
				<plugins>
					<plugin>
						<!-- mvn -P wildfly cargo:run -->
						<groupId>org.codehaus.cargo</groupId>
						<artifactId>cargo-maven3-plugin</artifactId>
						<version>${cargo-maven-plugin.version}</version>
						<configuration>
							<container>
								<containerId>${cargo-wildfly-runtime}</containerId>
								<systemProperties>
									<!-- see wildfly.cli -->
								</systemProperties>
							</container>
							<configuration>
								<properties>
									<cargo.start.jvmargs>
										--add-opens java.base/java.lang=ALL-UNNAMED
										--add-opens java.base/java.util=ALL-UNNAMED
										--add-opens java.base/java.io=ALL-UNNAMED
										--add-exports=java.naming/com.sun.jndi.ldap=ALL-UNNAMED
									</cargo.start.jvmargs>
									<cargo.wildfly.script.cli.embedded>${cargo-wildfly-script.dir}/wildfly.cli</cargo.wildfly.script.cli.embedded>
								</properties>
							</configuration>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>glassfish</id>
			<build>
				<plugins>
					<plugin>
						<!-- mvn -P glassfish cargo:run -->
						<groupId>org.codehaus.cargo</groupId>
						<artifactId>cargo-maven3-plugin</artifactId>
						<version>${cargo-maven-plugin.version}</version>
						<configuration>
							<container>
								<containerId>${cargo-glassfish-runtime}</containerId>
								<systemProperties>
								</systemProperties>
							</container>
							<configuration>
								<properties>
									<cargo.start.jvmargs>
										--add-opens java.base/java.lang=ALL-UNNAMED
										--add-opens java.base/java.util=ALL-UNNAMED
										--add-opens java.base/java.io=ALL-UNNAMED
									</cargo.start.jvmargs>
								</properties>
							</configuration>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>tomee</id>
			<build>
				<plugins>
					<plugin>
						<!-- mvn -P tomee tomee:run -->
						<groupId>org.apache.tomee.maven</groupId>
						<artifactId>tomee-maven-plugin</artifactId>
						<version>${tomee-maven-plugin.version}</version>
						<configuration>
							<tomeeVersion>${tomee-runtime.version}</tomeeVersion>
							<tomeeClassifier>plus</tomeeClassifier>
							<args>--add-opens java.base/java.lang=ALL-UNNAMED</args>
							<systemVariables>
							</systemVariables>
							<context>${project.artifactId}</context>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<build>
		<plugins>
			<plugin>
				<!-- TomEE test cases need this module setting -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<systemPropertyVariables>
						<browser>phantomjs</browser>
					</systemPropertyVariables>
					<argLine>
						--add-opens java.base/java.lang=ALL-UNNAMED
						--add-opens java.base/java.util=ALL-UNNAMED
						--add-opens java.base/java.io=ALL-UNNAMED
						--add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED
					</argLine>
				</configuration>
			</plugin>
			<plugin>
				<!-- Liberty wants DataSource classes in app server classpath. See server.xml -->
				<!-- In a real project, you'll re-factor this into modules. -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<executions>
					<execution>
						<id>liberty-dependency</id>
						<phase>package</phase>
						<goals>
							<goal>jar</goal>
						</goals>
						<configuration>
							<classifier>datasource</classifier>
							<includes>
								<include>**/*DataSource*</include>
								<include>**/*Flyway*</include>
							</includes>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<!-- ================================================ -->

	<!-- To run application: -->
	<!-- mvn -P liberty liberty:run / http://localhost:9080/${artifactId} -->
	<!-- mvn -P wildfly cargo:run / http://localhost:8080/${artifactId} -->
	<!-- mvn -P glassfish cargo:run / http://localhost:8080/${artifactId} -->
	<!-- mvn -P tomee tomee:run / http://localhost:8080/${artifactId} -->

</project>
